# YouTube-StrataRead

./: .gitignore  LICENSE  README.en.md  README.md  instruction.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/bionic_youtube/: __init__.py  __main__.py  cli.py  config.py  interactive.py
src/bionic_youtube/ai/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  prompts.py
src/bionic_youtube/downloader/: __init__.py  srt.py  youtube.py
src/bionic_youtube/examples/sample/: raw.srt
src/bionic_youtube/pipeline/: __init__.py  orchestrator.py
src/bionic_youtube/reader/: __init__.py  app.py  doc_tree.py  keys.py  manual_reader.py  navigator.py  progress_store.py  stream_reader.py
src/bionic_youtube/utils/: logging.py  sample.py  text.py
src/youtube_strataread/: __init__.py  __main__.py  cli.py  config.py  interactive.py
src/youtube_strataread/ai/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  gemini_provider.py  glm_provider.py  minimax_provider.py  openai_provider.py  openai_utils.py  prompts.py  zhipu_agent_translator.py
src/youtube_strataread/downloader/: __init__.py  srt.py  youtube.py
src/youtube_strataread/examples/sample/: Ivanka-Trump-Most-People-Can-t-Tell-Signal-From-Noise.md
src/youtube_strataread/pipeline/: orchestrator.py
src/youtube_strataread/reader/: app.py  bionic_render.py  doc_tree.py  highlights.py  keys.py  manual_reader.py  mouse.py  navigator.py  progress_store.py  session.py  status_bar.py  stream_reader.py
src/youtube_strataread/utils/: logging.py  sample.py  text.py
tests/: test_cli_config_compat.py  test_cli_youtube_auth.py  test_config_compat_profiles.py  test_deepseek_provider.py  test_example_and_providers.py  test_glm_provider.py  test_minimax_provider.py  test_navigator.py  test_openai_provider.py  test_pipeline_orchestrator.py  test_prompts.py  test_reader.py  test_reader_interactions.py  test_srt.py  test_text.py  test_youtube_downloader.py  test_zhipu_agent_translator.py
