[project]
name = "bionic-youtube"
version = "0.1.0"
description = "Terminal knowledge tool: fetch YouTube subtitles, AI-outline them, and read in Bionic style."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bionic-Youtube" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "prompt_toolkit>=3.0.43",
    "yt-dlp>=2024.4.9",
    "srt>=3.5",
    "openai>=1.30",
    "anthropic>=0.40",
    "google-genai>=1.3",
    "markdown-it-py>=3.0",
    "tomlkit>=0.12",
    "platformdirs>=4.2",
    "keyring>=25.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
by = "bionic_youtube.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bionic_youtube"]

[tool.hatch.build.targets.wheel.force-include]
"src/bionic_youtube/examples" = "bionic_youtube/examples"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# typer expects function calls (Option/Argument) as parameter defaults
"src/bionic_youtube/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
