[project]
name = "youtube-strataread"
version = "0.1.6"
description = "Turn any YouTube video into a layered, deep-readable Bionic Reading document in your terminal."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "v6582374-netizen" }]
keywords = ["youtube", "subtitles", "ai", "outline", "bionic-reading", "terminal", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "prompt_toolkit>=3.0.43",
    "yt-dlp>=2024.4.9",
    "srt>=3.5",
    "openai>=1.30",
    "anthropic>=0.40",
    "google-genai>=1.3",
    "markdown-it-py>=3.0",
    "tomlkit>=0.12",
    "platformdirs>=4.2",
    "keyring>=25.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/v6582374-netizen/YouTube-StrataRead"
Repository = "https://github.com/v6582374-netizen/YouTube-StrataRead"
Issues = "https://github.com/v6582374-netizen/YouTube-StrataRead/issues"

[project.scripts]
by = "youtube_strataread.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_strataread"]

[tool.hatch.build.targets.sdist]
include = ["src/youtube_strataread", "LICENSE", "README.md", "README.en.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# typer expects function calls (Option/Argument) as parameter defaults
"src/youtube_strataread/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
